--- a/views/blocks/nav.ejs
+++ b/views/blocks/nav.ejs
@@ -1,4 +1,11 @@
-<nav class="navbar navbar-expand-md fixed-bottom px-1 bg-light">
+<nav class="nav mb-3">
+  <div class="container-fluid text-white fw-lighter p-1" style="background-color: black;"><img src="favicon.svg"
+      height="20rem">
+    <small>&nbsp;aes.framework versão 1.0 | 202109 </small>
+  </div>
+  </div>
+</nav>
+<nav class="navbar navbar-expand fixed-bottom px-1" style="background-color: black;">
   <div class="container-fluid">
     <div>
       <a class="btn btn-success" href="/framework"><i class="bi bi-arrow-clockwise"></i></a>
