--- a/views/blocks/style.ejs
+++ b/views/blocks/style.ejs
@@ -3,7 +3,7 @@
 <link href="assets/vendor/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
 <style>
   body {
-    background-color: #f8f9fa;
-    padding-top: 1rem;
+    background-color: #c9c9c9;
+    color: #eeeeee;
   }
 </style>
