--- a/views/includes/framework/tools/dev/tools-dev-entity-create-form-inc.ejs
+++ b/views/includes/framework/tools/dev/tools-dev-entity-create-form-inc.ejs
@@ -11,13 +11,13 @@
         cada entidade cadastrada, são suas <strong>Propriedades</strong>.
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
-      <div id="alert-entity-name" class="alert alert-primary alert-dismissible show" role="alert">
+      <div id="alert-entity-name" class="alert alert-secondary alert-dismissible show" role="alert">
         <strong><i class="bi bi-box"></i>&nbsp;&nbsp;Nome</strong> : <strong>único</strong> no banco de dados; até 50
         caracteres entre letras, números e _
         <button type="button" class="btn-close text" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
       <div>
-        <label for="input-text-entity-name" class="label mb-1 text-primary"><i
+        <label for="input-text-entity-name" class="label mb-1 text-secondary"><i
             class="bi bi-box"></i>&nbsp;Entidade</label>
         <!-- #issue: pesquisar no banco entidade com mesmo nome a partir do terceiro caracter digitado -->
         <input type="text" minlength="3" maxlength="50" class="form-control is-invalid" id="input-text-entity-name"
@@ -35,13 +35,13 @@
           entidade pessoa.</span>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
-      <div id="alert-entity-namespace" class="alert alert-primary alert-dismissible show" role="alert">
+      <div id="alert-entity-namespace" class="alert alert-secondary alert-dismissible show" role="alert">
         <strong><i class="bi bi-tags"></i>&nbsp;&nbsp;Propriedades</strong> : id[entidade], crdate e isactive são
         criados em todas as tabelas por padrão
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
       <div>
-        <label for="input-textarea-entity-namespace" class="label mb-1 text-primary"><i
+        <label for="input-textarea-entity-namespace" class="label mb-1 text-secondary"><i
             class="bi bi-tags"></i>&nbsp;Propriedades</label>
         <textarea minlength="3" maxlength="500" class="form-control is-invalid" style="height: 5rem"
           id="input-textarea-entity-namespace" placeholder="Informe nomes únicos, separados por vírgulas"
@@ -67,7 +67,7 @@
           <i class="bi bi-search"></i></span>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
-      <div id="alert-entity-fields" class="alert alert-primary alert-dismissible show" role="alert">
+      <div id="alert-entity-fields" class="alert alert-secondary alert-dismissible show" role="alert">
         <strong><i class="bi bi-server"></i>&nbsp;&nbsp;Tabela</strong> : configure nos campos sua privacidade, tipo,
         tamanho, opcional e busca <i class="bi bi-search"></i>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
