--- a/views/includes/framework/tools/dev/tools-dev-entity-create-inc.ejs
+++ b/views/includes/framework/tools/dev/tools-dev-entity-create-inc.ejs
@@ -1,5 +1,5 @@
 <div class="tab-pane mt-3" id="entity-create" role="tabpanel" aria-labelledby="entity-create-tab">
-	<div class="alert alert-warning alert-dismissible show" role="alert">
+	<div class="alert alert-secondary alert-dismissible show" role="alert">
 		<strong><i class="bi bi-box"></i>&nbsp;&nbsp;Criar entidade</strong>
 		<small> : requer permissão [<strong>tools-dev-entity-create</strong>]</small>
 		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
