--- a/views/includes/framework/tools/dev/tools-dev-inc.ejs
+++ b/views/includes/framework/tools/dev/tools-dev-inc.ejs
@@ -1,5 +1,5 @@
 <div class="nav flex-column tab-pane mb-5" id="v-pills-dev" role="tabpanel" aria-labelledby="v-pills-dev-tab">
-  <div class="alert alert-warning alert-dismissible show" role="alert">
+  <div class="alert alert-secondary alert-dismissible show" role="alert">
     <strong><i class="bi bi-file-earmark-code-fill"></i>&nbsp;&nbsp;Dev</strong>
     <small> : requer permissão [<strong>tools-dev</strong>]</small>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
