--- a/views/includes/framework/tools/dev/tools-dev-entity-manager-inc.ejs
+++ b/views/includes/framework/tools/dev/tools-dev-entity-manager-inc.ejs
@@ -1,7 +1,7 @@
 <!-- @format -->
 
 <div class="tab-pane mt-3" id="entity-manager" role="tabpanel" aria-labelledby="entity-manager-tab" id="entity-manager">
-	<div class="alert alert-warning alert-dismissible show" role="alert">
+	<div class="alert alert-secondary alert-dismissible show" role="alert">
 		<strong><i class="bi bi-bounding-box"></i>&nbsp;&nbsp;Gerenciar entidades</strong
 		><small> [<strong>tools-dev-entity-manager</strong>]</small>
 		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
