Versão Alpha da interface

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -17,20 +17,18 @@
   <link href="/assets/vendor/bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
-
- body{
-   background-image: url('assets/images/bg.svg');         
-  overflow: hidden;
-           padding: 0;
-           margin: 0;
-           background-repeat: no-repeat;
-           background-size: cover;
-                       width: 100vw;
-            height: 100vh;
-            margin: 0 auto;
-            align-items: center;
-       }
-
+    body {
+      background-image: url('assets/images/bg.svg');
+      overflow: hidden;
+      padding: 0;
+      margin: 0;
+      background-repeat: no-repeat;
+      background-size: cover;
+      width: 100vw;
+      height: 100vh;
+      margin: 0 auto;
+      align-items: center;
+    }
   </style>
 
 </head>
@@ -38,26 +36,26 @@
 <body>
 
   <main>
-   
+
     <div class="container col-xxl-8 px-4 py-5">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
         <div class="col-10 col-sm-8 col-lg-6">
-          <img src="assets/images/balao-aes-color.svg" class="d-block mx-lg-auto img-fluid" loading="lazy">
+          <img src="favicon.svg" class="d-block mx-lg-auto img-fluid" loading="lazy">
         </div>
         <div class="col-lg-6 shadow p-5 border-light rounded">
-          <h1 class="display-5 fw-bold lh-1 mb-3">Quase lá.</h1>
+          <h1 class="display-3 fw-bold lh-1 mb-3">Sua próxima área de trabalho.</h1>
           <p class="lead">
-          Estamos construindo um framework simples, prático, divertido e <strong>gratuito</strong> para dar uma força para quem quer começar a desenvolver sistemas web hoje mesmo. Venha a bordo!
+            Acompanhe o desenvolvimento ao vivo em nosso canal no YouTube
           </p>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <a href="mailto: aes.tec.br@gmail.com" type="button" class="btn btn-primary btn-lg px-4 me-md-2">Me avise!</a>
+            <a href="/framework" class="btn btn-primary">Versão Alpha</a>
           </div>
         </div>
       </div>
     </div>
-  
-  </div>
-    
+
+    </div>
+
 
   </main>
 
