--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -18,16 +18,7 @@
 
   <style>
     body {
-      background-image: url('assets/images/bg.svg');
-      overflow: hidden;
-      padding: 0;
-      margin: 0;
-      background-repeat: no-repeat;
-      background-size: cover;
-      width: 100vw;
-      height: 100vh;
-      margin: 0 auto;
-      align-items: center;
+      background-color: black;
     }
   </style>
 
@@ -42,13 +33,13 @@
         <div class="col-10 col-sm-8 col-lg-6">
           <img src="favicon.svg" class="d-block mx-lg-auto img-fluid" loading="lazy">
         </div>
-        <div class="col-lg-6 shadow p-5 border-light rounded">
-          <h1 class="display-3 fw-bold lh-1 mb-3">Sua próxima área de trabalho.</h1>
-          <p class="lead">
+        <div class="col-lg-6 shadow p-5 border-light rounded bg-dark" style="opacity: .5;">
+          <h1 class="display-3 fw-bold lh-1 mb-3 text-white">Sua próxima área de trabalho.</h1>
+          <p class="lead text-light">
             Acompanhe o desenvolvimento ao vivo em nosso canal no YouTube
           </p>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <a href="/framework" class="btn btn-primary">Versão Alpha</a>
+            <a href="/framework" class="btn btn-primary">Conheça a versão Alpha</a>
           </div>
         </div>
       </div>
