--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -2,56 +2,58 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-  <meta name="generator" content="Hugo 0.84.0">
-  <title>Framework aes. para NodeJs</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Hugo 0.84.0">
+    <title>Framework aes. para NodeJs</title>
 
-  <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/heroes/">
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/heroes/">
 
 
 
-  <!-- Bootstrap core CSS -->
-  <link href="/assets/vendor/bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap core CSS -->
+    <link href="/assets/vendor/bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <style>
-    body {
-      background-color: black;
-    }
-  </style>
+    <style>
+        body {
+            background-image: url("assets/images/estrutura-aes-fw.svg");
+            background-size: cover;
+            background-color: black;
+        }
+    </style>
 
 </head>
 
 <body>
 
-  <main>
+    <main>
 
-    <div class="container col-xxl-8 px-4 py-5">
-      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-        <div class="col-10 col-sm-8 col-lg-6">
-          <img src="favicon.svg" class="d-block mx-lg-auto img-fluid" loading="lazy">
+        <div class="container col-xxl-8 px-4 py-5">
+            <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+                <div class="col-10 col-sm-8 col-lg-6">
+
+                </div>
+                <div class="col-lg-6 p-5" style="opacity: .9;">
+                    <h1 class="display-3 fw-bold lh-1 mb-3 text-white shadow">Sua próxima área de trabalho.</h1>
+                    <p class="lead text-light">
+                        <a class="text-white" href="mailto: aes.tec.br@gmail.com">aes.tec.br@gmail.com</a>
+                    </p>
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                        <a href="/framework" class="btn btn-primary">Versão 1.0 (alpha)</a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="col-lg-6 shadow p-5 border-light rounded bg-dark" style="opacity: .5;">
-          <h1 class="display-3 fw-bold lh-1 mb-3 text-white">Sua próxima área de trabalho.</h1>
-          <p class="lead text-light">
-            Acompanhe o desenvolvimento ao vivo em nosso canal no YouTube
-          </p>
-          <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <a href="/framework" class="btn btn-primary">Conheça a versão Alpha</a>
-          </div>
+
         </div>
-      </div>
-    </div>
-
-    </div>
 
 
-  </main>
+    </main>
 
 
-  <script src="assets/vendor/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
 
 
 </body>
