--- a/views/blocks/nav.ejs
+++ b/views/blocks/nav.ejs
@@ -1,43 +1,41 @@
 <nav class="nav mb-3">
-  <div class="container-fluid text-white fw-lighter p-1" style="background-color: black;"><img src="favicon.svg"
-      height="20rem">
-    <small>&nbsp;aes.framework versão 1.0 | 202109 </small>
-  </div>
-  </div>
+    <div class="container-fluid text-white fw-lighter p-1" style="background-color: black;">
+        <img src="favicon.svg" height="20rem">
+        <small>&nbsp;aes.framework versão 1.0 | 202109 </small>
+    </div>
+    <div>
+    </div>
 </nav>
 <nav class="navbar navbar-expand fixed-bottom px-1" style="background-color: black;">
-  <div class="container-fluid">
-    <div>
-      <a class="btn btn-success" href="/framework"><i class="bi bi-arrow-clockwise"></i></a>
-    </div>
     <div class="container-fluid">
-      <ul class="nav nav-tabs" id="nav-bar" role="tablist">
-        <li class="nav-item" role="presentation">
-          <button class="nav-link active" id="nav-desktop-tab" data-bs-toggle="tab" data-bs-target="#nav-desktop"
-            type="button" role="tab" aria-controls="nav-desktop" aria-selected="true">
+        <div>
+            <a class="btn btn-success" href="/framework"><i class="bi bi-arrow-clockwise"></i></a>
+        </div>
+        <div class="container-fluid">
+            <ul class="nav nav-tabs" id="nav-bar" role="tablist">
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link active" id="nav-desktop-tab" data-bs-toggle="tab" data-bs-target="#nav-desktop" type="button" role="tab" aria-controls="nav-desktop" aria-selected="true">
             <i class="bi bi-person-circle"></i>
           </button>
-        </li>
-        <li class="nav-item" role="presentation">
-          <button class="nav-link" id="nav-apps-tab" data-bs-toggle="tab" data-bs-target="#nav-apps" type="button"
-            role="tab" aria-controls="nav-apps" aria-selected="false">
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="nav-apps-tab" data-bs-toggle="tab" data-bs-target="#nav-apps" type="button" role="tab" aria-controls="nav-apps" aria-selected="false">
             <i class="bi bi-grid"></i>
           </button>
-        </li>
-        <li class="nav-item" role="presentation">
-          <button class="nav-link" id="nav-tools-tab" data-bs-toggle="tab" data-bs-target="#nav-tools" type="button"
-            role="tab" aria-controls="nav-tools" aria-selected="false">
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="nav-tools-tab" data-bs-toggle="tab" data-bs-target="#nav-tools" type="button" role="tab" aria-controls="nav-tools" aria-selected="false">
             <i class="bi bi-gear"></i>
           </button>
-        </li>
-      </ul>
+                </li>
+            </ul>
+        </div>
+        <div class="px-3"><img src="assets/images/arte-e-software-cubo.svg" style="width: 10rem !important" />
+        </div>
+        <div>
+            <div class="form-check form-switch text-warning">
+                <input class="form-check-input" type="checkbox" id="checkbox-dismiss-all-alerts" entityfieldformtype="checkbox" checked /><i class="bi bi-bookmark-x-fill"></i>
+            </div>
+        </div>
     </div>
-    <img src="assets/images/arte-e-software-cubo.svg" style="width: 10rem !important" />
-    <div class="px-2">
-      <div class="form-check form-switch text-warning">
-        <input class="form-check-input" type="checkbox" id="checkbox-dismiss-all-alerts" entityfieldformtype="checkbox"
-          checked /><i class="bi bi-bookmark-x-fill"></i>
-      </div>
-    </div>
-  </div>
 </nav>
