--- a/views/includes/framework/tools/dev/tools-dev-entity-create-form-inc.ejs
+++ b/views/includes/framework/tools/dev/tools-dev-entity-create-form-inc.ejs
@@ -1,61 +1,50 @@
 <div class="flex-column">
-  <form class="form-group">
-    <div class="my-3 border border-light-grey p-3 rounded">
-      <div class="alert alert-dismissible show" role="alert" style="border: 1px solid #eeeeee">
-        <i class="bi bi-box"></i>&nbsp; <strong>Entidades são susbtantivos</strong> : uma entidade representa o sujeito
-        da frase e um importante ator nas regras do seu negócio.
-        <hr />
-        <i class="bi bi-info-circle"></i>&nbsp;Toda <strong>entidade</strong> é única no sistema. Uma pessoa é uma
-        entidade, assim como um curso, uma escola, um veículo, etc. Todo adjetivo que qualifique uma entidade, ou tudo
-        aquilo que caracteriza
-        cada entidade cadastrada, são suas <strong>Propriedades</strong>.
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-      <div id="alert-entity-name" class="alert alert-secondary alert-dismissible show" role="alert">
-        <strong><i class="bi bi-box"></i>&nbsp;&nbsp;Nome</strong> : <strong>único</strong> no banco de dados; até 50
-        caracteres entre letras, números e _
-        <button type="button" class="btn-close text" data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-      <div>
-        <label for="input-text-entity-name" class="label mb-1 text-secondary"><i
+    <form class="form-group">
+        <div class="my-3 border border-light-grey p-3 rounded">
+            <div class="alert alert-dismissible show" role="alert" style="border: 1px solid #eeeeee">
+                <i class="bi bi-box"></i>&nbsp; <strong>Entidades são susbtantivos</strong> : uma entidade representa o sujeito da frase e um importante ator nas regras do seu negócio.
+                <hr />
+                <i class="bi bi-info-circle"></i>&nbsp;Toda <strong>entidade</strong> é única no sistema. Uma pessoa é uma entidade, assim como um curso, uma escola, um veículo, etc. Todo adjetivo que qualifique uma entidade, ou tudo aquilo que caracteriza
+                cada entidade cadastrada, são suas <strong>Propriedades</strong>.
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            <div id="alert-entity-name" class="alert alert-secondary alert-dismissible show" role="alert">
+                <strong><i class="bi bi-box"></i>&nbsp;&nbsp;Nome</strong> : <strong>único</strong> no banco de dados; até 50 caracteres entre letras, números e _
+                <button type="button" class="btn-close text" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            <div>
+                <label for="input-text-entity-name" class="label mb-1 text-secondary"><i
             class="bi bi-box"></i>&nbsp;Entidade</label>
-        <!-- #issue: pesquisar no banco entidade com mesmo nome a partir do terceiro caracter digitado -->
-        <input type="text" minlength="3" maxlength="50" class="form-control is-invalid" id="input-text-entity-name"
-          placeholder="Informe um nome único para a entidade" autocomplete="off" />
-      </div>
-    </div>
-    <div class="my-3 border border-light-grey p-3 rounded">
-      <div class="alert alert-dismissible show" role="alert" style="border: 1px solid #eeeeee">
-        <i class="bi bi-tags"></i>&nbsp; <strong>Propriedades são adjetivos</strong> : uma propriedade é uma
-        característca, um dado, de cada entidade.
-        <hr />
-        <span class="text-secondary"><i class="bi bi-info-circle"></i>&nbsp;<strong>Propriedades</strong>, como os
+                <!-- #issue: pesquisar no banco entidade com mesmo nome a partir do terceiro caracter digitado -->
+                <input type="text" minlength="3" maxlength="50" class="form-control is-invalid" id="input-text-entity-name" placeholder="Informe um nome único para a entidade" autocomplete="off" />
+            </div>
+        </div>
+        <div class="my-3 border border-light-grey p-3 rounded">
+            <div class="alert alert-dismissible show" role="alert" style="border: 1px solid #eeeeee">
+                <i class="bi bi-tags"></i>&nbsp; <strong>Propriedades são adjetivos</strong> : uma propriedade é uma característca, um dado, de cada entidade.
+                <hr />
+                <span class="text-secondary"><i class="bi bi-info-circle"></i>&nbsp;<strong>Propriedades</strong>, como os
           adjetivos, qualificam as
           entidade. O nome de uma pessoa, seu e-mail, seu número de celular e sua senha são as propriedades de uma
           entidade pessoa.</span>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-      <div id="alert-entity-namespace" class="alert alert-secondary alert-dismissible show" role="alert">
-        <strong><i class="bi bi-tags"></i>&nbsp;&nbsp;Propriedades</strong> : id[entidade], crdate e isactive são
-        criados em todas as tabelas por padrão
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-      <div>
-        <label for="input-textarea-entity-namespace" class="label mb-1 text-secondary"><i
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            <div id="alert-entity-namespace" class="alert alert-secondary alert-dismissible show" role="alert">
+                <strong><i class="bi bi-tags"></i>&nbsp;&nbsp;Propriedades</strong> : id[entidade], crdate e isactive são criados em todas as tabelas por padrão
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            <div>
+                <label for="input-textarea-entity-namespace" class="label mb-1 text-secondary"><i
             class="bi bi-tags"></i>&nbsp;Propriedades</label>
-        <textarea minlength="3" maxlength="500" class="form-control is-invalid" style="height: 5rem"
-          id="input-textarea-entity-namespace" placeholder="Informe nomes únicos, separados por vírgulas"
-          autocomplete="off"></textarea>
-      </div>
-    </div>
-    <div class="my-3 border border-light-grey p-3 rounded">
-      <div class="alert alert-dismissible show" role="alert" style="border: 1px solid #eeeeee">
-        <strong><i class="bi bi-server"></i>&nbsp;&nbsp;Tabelas</strong> : as entidades e suas propriedades são
-        armazenadas em tabelas. Em sua configuração, são estabelecidas regras a fim de garantir a consistência dos dados
-        e o correto funcionameto
-        do sistema.
-        <hr />
-        <span class="text-secondary"><i class="bi bi-info-circle"></i>&nbsp;<strong>Privacidade</strong>: estabelece
+                <textarea minlength="3" maxlength="500" class="form-control is-invalid" style="height: 5rem" id="input-textarea-entity-namespace" placeholder="Informe nomes únicos, separados por vírgulas" autocomplete="off"></textarea>
+            </div>
+        </div>
+        <div class="my-3 border border-secondary p-3 rounded">
+            <div class="alert alert-dismissible show" role="alert" style="border: 1px solid #eeeeee">
+                <strong><i class="bi bi-server"></i>&nbsp;&nbsp;Tabelas</strong> : as entidades e suas propriedades são armazenadas em tabelas. Em sua configuração, são estabelecidas regras a fim de garantir a consistência dos dados e o correto funcionameto
+                do sistema.
+                <hr />
+                <span class="text-secondary"><i class="bi bi-info-circle"></i>&nbsp;<strong>Privacidade</strong>: estabelece
           conformidade com sua política
           de privacidade. <strong>Tipo: Número</strong> armazena números negativos, positivos, inteiros ou fracionados;
           <strong>Texto</strong> armazena um conjuto de caracteres com
@@ -65,87 +54,82 @@
           falso. <strong>Opcional</strong>. Por padrão todos os campos são obrigatórios, para torná-lo opcional, ligue o
           seletor. Toda tabela precisa ter ao menos um campo obrigatório que permita pesquisa
           <i class="bi bi-search"></i></span>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-      <div id="alert-entity-fields" class="alert alert-secondary alert-dismissible show" role="alert">
-        <strong><i class="bi bi-server"></i>&nbsp;&nbsp;Tabela</strong> : configure nos campos sua privacidade, tipo,
-        tamanho, opcional e busca <i class="bi bi-search"></i>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-      <div>
-        <nav>
-          <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            <div id="alert-entity-fields" class="alert alert-secondary alert-dismissible show" role="alert">
+                <strong><i class="bi bi-server"></i>&nbsp;&nbsp;Tabela</strong> : configure nos campos sua privacidade, tipo, tamanho, opcional e busca <i class="bi bi-search"></i>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            <div>
+                <nav>
+                    <div class="nav nav-tabs" id="nav-tab" role="tablist">
 
-            <button class="nav-link active" id="nav-form-tab" data-bs-toggle="tab" data-bs-target="#nav-form"
-              type="button" role="tab" aria-controls="nav-form" aria-selected="true"><i
+                        <button class="nav-link active" id="nav-form-tab" data-bs-toggle="tab" data-bs-target="#nav-form" type="button" role="tab" aria-controls="nav-form" aria-selected="true"><i
                 class="bi bi-ui-checks"></i>&nbsp;Configuração</label>&nbsp;&nbsp;</button>
 
-            <button class="nav-link" id="nav-code-entitysql-tab" data-bs-toggle="tab"
-              data-bs-target="#nav-code-entitysql" type="button" role="tab" aria-controls="nav-code-entitysql"
-              aria-selected="false"><span class="fw-bolder">{&nbsp;}</span>&nbsp;Json</button>
+                        <button class="nav-link" id="nav-code-entitysql-tab" data-bs-toggle="tab" data-bs-target="#nav-code-entitysql" type="button" role="tab" aria-controls="nav-code-entitysql" aria-selected="false"><span class="fw-bolder">{&nbsp;}</span>&nbsp;Json</button>
 
-            <button class="nav-link" id="nav-code-sql-tab" data-bs-toggle="tab" data-bs-target="#nav-code-sql"
-              type="button" role="tab" aria-controls="nav-code-sql" aria-selected="false"><i
+                        <button class="nav-link" id="nav-code-sql-tab" data-bs-toggle="tab" data-bs-target="#nav-code-sql" type="button" role="tab" aria-controls="nav-code-sql" aria-selected="false"><i
                 class="bi bi-server"></i>&nbsp;Sql</button>
 
-          </div>
-        </nav>
-        <div class="tab-content">
+                    </div>
+                </nav>
+                <div class="tab-content">
 
-          <div class="tab-pane show active" id="nav-form" role="tabpanel" aria-labelledby="nav-form-tab">
-            <div class="table-responsive">
-              <table class="table table-hover">
-                <thead>
-                  <tr>
-                    <th class="text-left">Campo</th>
-                    <th class="text-center" style="width: 10rem">Privacidade&nbsp;<i class="bi bi-lock-fill"></i></th>
-                    <th class="text-center" style="width: 10rem">Tipo</th>
-                    <th class="text-center" style="width: 8rem">Tamanho</th>
-                    <th class="text-left" style="width: 2.5rem">Opcional</th>
-                    <th class="text-left fw-bold" style="width: 2.5rem">
-                      <i class="bi bi-search"></i>
-                    </th>
-                  </tr>
-                </thead>
-                <tbody id="fields-settings"></tbody>
-              </table>
-            </div>
-          </div>
+                    <div class="tab-pane show active" id="nav-form" role="tabpanel" aria-labelledby="nav-form-tab">
+                        <div class="table-responsive">
+                            <table class="table table-hover">
+                                <thead>
+                                    <tr>
+                                        <th class="text-left">Campo</th>
+                                        <th class="text-center" style="width: 10rem">Privacidade&nbsp;<i class="bi bi-lock-fill"></i></th>
+                                        <th class="text-center" style="width: 10rem">Tipo</th>
+                                        <th class="text-center" style="width: 8rem">Tamanho</th>
+                                        <th class="text-left" style="width: 2.5rem">Opcional</th>
+                                        <th class="text-left fw-bold" style="width: 2.5rem">
+                                            <i class="bi bi-search"></i>
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody id="fields-settings"></tbody>
+                            </table>
+                        </div>
+                    </div>
 
-          <div class="tab-pane" id="nav-code-entitysql" role="tabpanel" aria-labelledby="nav-code-entitysql-tab">
-            <div class="table-responsive">
-              <table class="table table-hover">
-                <thead>
-                  <tr>
-                    <th class="text-left">Json</th>
-                  </tr>
-                </thead>
-                <tbody id="entity-entitysql"></tbody>
-              </table>
-            </div>
-          </div>
+                    <div class="tab-pane" id="nav-code-entitysql" role="tabpanel" aria-labelledby="nav-code-entitysql-tab">
+                        <div class="table-responsive">
+                            <table class="table table-hover">
+                                <thead>
+                                    <tr>
+                                        <th class="text-left">Json</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="entity-entitysql"></tbody>
+                            </table>
+                        </div>
+                    </div>
 
-          <div class="tab-pane" id="nav-code-sql" role="tabpanel" aria-labelledby="nav-code-sql-tab">
-            <div class="table-responsive">
-              <table class="table table-hover">
-                <thead>
-                  <tr>
-                    <th class="text-left">Sql</th>
-                  </tr>
-                </thead>
-                <tbody id="entity-sql"></tbody>
-              </table>
-            </div>
-          </div>
-          <div>
-            <button class="btn btn-outline-secondary" id="btn-entity-create-config"><i
+                    <div class="tab-pane" id="nav-code-sql" role="tabpanel" aria-labelledby="nav-code-sql-tab">
+                        <div class="table-responsive">
+                            <table class="table table-hover">
+                                <thead>
+                                    <tr>
+                                        <th class="text-left">Sql</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="entity-sql"></tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <div>
+                        <button class="btn btn-outline-secondary" id="btn-entity-create-config"><i
                 class="bi bi-box"></i>&nbsp;&nbsp;Limpar</button>
-            <button class="btn btn-success" id="btn-entity-create">Criar&nbsp;&nbsp;<i class="bi bi-box"></i></button>
-          </div>
+                        <button class="btn btn-success" id="btn-entity-create">Criar&nbsp;&nbsp;<i class="bi bi-box"></i></button>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </form>
+    </form>
 </div>
 <script src="assets/javascript/framework/tools/dev/entity/create/pretty.js "></script>
 <script src="assets/javascript/framework/tools/dev/entity/create/settings.js "></script>
