--- a/views/pages/framework.ejs
+++ b/views/pages/framework.ejs
@@ -2,46 +2,49 @@
 <html lang="pt-br">
 <%-include ../blocks/head.ejs %>
 
-  <body>
-    <%-include ../blocks/nav.ejs %>
-      <main class="flex">
-        <div class="container-flex" id="main-framework">
-          <div class="tab-content px-4" id="nav-tabContent">
-            <%-include ../includes/framework/desktop/desktop-inc.ejs %>
-              <%-include ../includes/framework/apps/apps-inc.ejs %>
-                <%-include ../includes/framework/tools/tools-inc.ejs %>
-          </div>
-        </div>
-      </main>
-      <%-include ../blocks/javascript.ejs %>
-  </body>
-  <script src="assets/javascript/tools/api/request.js"></script>
-  <script src="assets/javascript/tools/socket/package.js"></script>
-  <script src="assets/javascript/tools/socket/call.js"></script>
-  <script src="assets/javascript/tools/socket/sql.js"></script>
-  <script src="assets/javascript/tools/socket/file.js"></script>
-  <script src="assets/javascript/tools/socket/serverfunction.js"></script>
-  <script>
-    ; (() => {
-      let checkbox = document.getElementById("checkbox-dismiss-all-alerts"),
-        dismissible = document.getElementsByClassName("alert-dismissible"),
-        dismiss = false
+    <body>
+        <%-include ../blocks/nav.ejs %>
+            <main class="flex">
+                <div class="container-flex" id="main-framework">
+                    <div class="tab-content px-4" id="nav-tabContent">
+                        <%-include ../includes/framework/desktop/desktop-inc.ejs %>
+                            <%-include ../includes/framework/apps/apps-inc.ejs %>
+                                <%-include ../includes/framework/tools/tools-inc.ejs %>
+                    </div>
+                </div>
+            </main>
+            <%-include ../blocks/javascript.ejs %>
+    </body>
+    <script src="assets/javascript/tools/api/request.js"></script>
+    <script src="assets/javascript/tools/socket/package.js"></script>
+    <script src="assets/javascript/tools/socket/call.js"></script>
+    <script src="assets/javascript/tools/socket/sql.js"></script>
+    <script src="assets/javascript/tools/socket/file.js"></script>
+    <script src="assets/javascript/tools/socket/serverfunction.js"></script>
 
-      checkbox.addEventListener("click", (event) => {
-        dismiss = checkbox.checked
+    <script>
+        window.onload(() => {
 
-        if (!dismiss) {
-          for (i = 0; i < dismissible.length; i++) {
-            dismissible[i].style.display = "none"
-          }
-        } else {
-          for (i = 0; i < dismissible.length; i++) {
-            dismissible[i].style.display = "block"
-          }
-        }
-      })
-    })()
-  </script>
+            let checkbox = document.getElementById("checkbox-dismiss-all-alerts"),
+                dismissible = document.getElementsByClassName("alert-dismissible"),
+                dismiss = false
+
+            checkbox.addEventListener("click", (event) => {
+                dismiss = checkbox.checked
+
+                if (!dismiss) {
+                    for (i = 0; i < dismissible.length; i++) {
+                        dismissible[i].style.display = "none"
+                    }
+                } else {
+                    for (i = 0; i < dismissible.length; i++) {
+                        dismissible[i].style.display = "block"
+                    }
+                }
+            })
+
+        })
+    </script>
 
 </html>
 
