Teaser - para aprovação do professor Luiz Tools

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -38,6 +38,15 @@
                 <div class="col-lg-6 p-5" style="opacity: .9;">
                     <h1 class="display-3 fw-bold lh-1 mb-3 text-white shadow">Sua próxima área de trabalho.</h1>
                     <p class="lead text-light">
+                        <figure class="text-light">
+                            <blockquote class="blockquote">
+                                <p>Tenho como como missão ajudar pessoas a terem êxito em negócios e carreiras que envolvam tecnologia e inovação.</p>
+                            </blockquote>
+                            <figcaption class="blockquote-footer">
+                                Luiz Tools, <cite title="Source Title">professor</cite>
+                            </figcaption>
+                        </figure>
+                        <p class="text-secondary">Eu sou o Pedro Silva, desenvolvedor do aes.framework, inpirado na missão do Luiz, que também é a nossa.</p>
                         <a class="text-white" href="mailto: aes.tec.br@gmail.com">aes.tec.br@gmail.com</a>
                     </p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
