Interface operacional 1.0 - ainda no sprint map-layer

--- a/views/includes/framework/apps/apps-inc.ejs
+++ b/views/includes/framework/apps/apps-inc.ejs
@@ -1,12 +1,12 @@
 <div class="tab-pane" id="nav-apps" role="tabpanel" aria-labelledby="nav-apps-tab">
-  <div class="alert alert-secondary alert-dismissible show" role="alert">
+  <div class="alert alert-warning alert-dismissible show" role="alert">
     <strong><i class="bi bi-grid"></i>&nbsp;&nbsp;Aplicativos</strong><small> : requer permissão
       [<strong>apps</strong>]</small>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
   <div class="container-alert alert-apps"></div>
   <div class="container-apps">
-    <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#app-test">
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#app-test">
       <i class="bi bi-arrows-fullscreen"></i>&nbsp;&nbsp;App
     </button>
   </div>
@@ -22,7 +22,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <div class="alert alert-secondary alert-dismissible show" role="alert">
+        <div class="alert alert-warning alert-dismissible show" role="alert">
           <strong><i class="bi bi-arrows-fullscreen"></i>&nbsp;&nbsp;App</strong><small> : requer
             permissão
             [<strong>app-id</strong>]</small>
@@ -31,7 +31,7 @@
         <code>app-code</code>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar App</button>
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Fechar App</button>
       </div>
     </div>
   </div>
