--- a/views/includes/framework/governance/governance-inc.ejs
+++ b/views/includes/framework/governance/governance-inc.ejs
@@ -1,5 +1,5 @@
 <div class="flex tab-pane" id="nav-governance" role="tabpanel" aria-labelledby="nav-governance-tab">
-    <div class="alert alert-secondary alert-dismissible show" role="alert">
+    <div class="alert alert-warning alert-dismissible show" role="alert">
         <strong><i class="bi bi-bank"></i>&nbsp;&nbsp;Governança</strong><small> : requer permissão
             [<strong>governance</strong>]</small>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
