--- a/views/includes/framework/tools/sql/tools-sql-inc.ejs
+++ b/views/includes/framework/tools/sql/tools-sql-inc.ejs
@@ -1,6 +1,6 @@
 <div class="nav flex-column tab-pane" id="v-pills-sql" role="tabpanel" aria-labelledby="v-pills-sql-tab">
 
-  <div class="alert alert-secondary alert-dismissible show" role="alert">
+  <div class="alert alert-warning alert-dismissible show" role="alert">
     <strong><i class="bi bi-server"></i>&nbsp;&nbsp;Sql</strong><small> : requer permissão
       [<strong>tools-sql</strong>]</small>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
