--- a/views/includes/framework/tools/tools-inc.ejs
+++ b/views/includes/framework/tools/tools-inc.ejs
@@ -1,5 +1,5 @@
 <div class="flex tab-pane" id="nav-tools" role="tabpanel" aria-labelledby="nav-tools-tab">
-  <div class="alert alert-secondary alert-dismissible show" role="alert">
+  <div class="alert alert-warning alert-dismissible show" role="alert">
     <strong><i class="bi bi-gear"></i>&nbsp;&nbsp;Ferramentas</strong><small> : requer permissão
       [<strong>tools</strong>]</small>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
