--- a/views/blocks/style.ejs
+++ b/views/blocks/style.ejs
@@ -3,7 +3,7 @@
 <link href="assets/vendor/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
 <style>
     body {
-        background-color: #c4c4c4;
-        color: #eeeeee;
+        background-color: #eeeeee;
+        color: #333333;
     }
 </style>
