Limpeza geral na interface

--- a/views/blocks/nav.ejs
+++ b/views/blocks/nav.ejs
@@ -28,7 +28,8 @@
                 </li>
             </ul>
         </div>
-        <div class="px-3"><img src="assets/images/arte-e-software-cubo.svg" style="width: 10rem !important" />
+        <div class="px-3">
+            <img src="assets/images/arte-e-software-cubo.svg" style="width: 10rem !important" />
         </div>
         <div>
             <div class="form-check form-switch text-warning">
