--- a/views/framework/apps/apps-inc.ejs
+++ b/views/framework/apps/apps-inc.ejs
@@ -1,6 +1,6 @@
 <div class="tab-pane" id="nav-apps" role="tabpanel" aria-labelledby="nav-apps-tab">
   <div class="alert alert-warning alert-dismissible show" role="alert">
-    <strong><i class="bi bi-grid"></i>&nbsp;&nbsp;Aplicativos</strong><small> : requer permissão
+    <strong><i class="bi bi-shield-shaded"></i>&nbsp;&nbsp;Aplicativos</strong><small>: requer permissão
       [<strong>apps</strong>]</small>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
@@ -23,7 +23,7 @@
       </div>
       <div class="modal-body">
         <div class="alert alert-warning alert-dismissible show" role="alert">
-          <strong><i class="bi bi-arrows-fullscreen"></i>&nbsp;&nbsp;App</strong><small> : requer
+          <strong><i class="bi bi-arrows-fullscreen"></i>&nbsp;&nbsp;App</strong><small>: requer
             permissão
             [<strong>app-id</strong>]</small>
           <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
