--- a/views/framework/tools/entity/entity-create-inc.ejs
+++ b/views/framework/tools/entity/entity-create-inc.ejs
@@ -1,9 +1,15 @@
 <div class="tab-pane mt-3" id="entity-create" role="tabpanel" aria-labelledby="entity-create-tab">
+
 	<div class="alert alert-warning alert-dismissible show" role="alert">
-		<strong><i class="bi bi-box"></i>&nbsp;&nbsp;Criar entidade</strong>
-		<small> : requer permissão [<strong>tools-dev-entity-create</strong>]</small>
+
+		<strong><i class="bi bi-shield-shaded"></i>&nbsp;&nbsp;Criar entidade</strong>
+		<small>: requer permissão [<strong>tools-entity-create</strong>]</small>
 		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+
 	</div>
-	<%-include ./tools-dev-entity-create-form-inc.ejs %>
-	<div style="height: 5rem">&nbsp;</div>
+
+	<%-include entity-create-form-inc.ejs %>
+
+	<div style="height: 10rem">&nbsp;</div>
+
 </div>
