Limpeza na interface

--- a/views/blocks/nav.ejs
+++ b/views/blocks/nav.ejs
@@ -1,7 +1,7 @@
-<nav class="nav mb-3">
+<nav class="nav">
     <div class="container-fluid text-white fw-lighter p-1" style="background-color: black; opacity: .9;">
         <img src="favicon.svg" height="20rem">
-        <small>&nbsp;aes.framework versão 1.0 | 202109 </small>
+        <small>&nbsp;aes.framework versão 1.0 alfa</small>
     </div>
 </nav>
 <nav class="navbar navbar-expand fixed-bottom px-1" style="background-color: black; opacity: .9;">
@@ -33,7 +33,7 @@
         </div>
         <div>
             <div class="form-check form-switch text-warning">
-                <input class="form-check-input" type="checkbox" id="checkbox-dismiss-all-alerts" entityfieldformtype="checkbox" checked /><i class="bi bi-bookmark-x-fill"></i>
+                <input class="form-check-input" type="checkbox" id="checkbox-dismiss-all-alerts" entityfieldformtype="checkbox" checked /><i class="bi bi-shield-shaded"></i>
             </div>
         </div>
     </div>
