--- a/views/framework/apps/apps-inc.ejs
+++ b/views/framework/apps/apps-inc.ejs
@@ -1,4 +1,4 @@
-<div class="tab-pane" id="nav-apps" role="tabpanel" aria-labelledby="nav-apps-tab">
+<div class="tab-pane mt-3" id="nav-apps" role="tabpanel" aria-labelledby="nav-apps-tab">
   <div class="alert alert-warning alert-dismissible show" role="alert">
     <strong><i class="bi bi-shield-shaded"></i>&nbsp;&nbsp;Aplicativos</strong><small>: requer permissão
       [<strong>apps</strong>]</small>
