--- a/views/framework/desktop/desktop-inc.ejs
+++ b/views/framework/desktop/desktop-inc.ejs
@@ -1,4 +1,4 @@
-<div class="tab-pane show active" id="nav-desktop" role="tabpanel" aria-labelledby="nav-desktop-tab">
+<div class="tab-pane mt-3 show active" id="nav-desktop" role="tabpanel" aria-labelledby="nav-desktop-tab">
 
   <div class="alert alert-warning alert-dismissible show" role="alert">
 
