--- a/views/framework/tools/sql/sql-inc.ejs
+++ b/views/framework/tools/sql/sql-inc.ejs
@@ -3,7 +3,7 @@
   <div class="alert alert-warning alert-dismissible show" role="alert">
 
     <strong><i class="bi bi-shield-shaded"></i>&nbsp;&nbsp;Sql</strong>
-    <small>: requer permissão [<strong>tools-sql</strong>]</small>
+    <small>: requer permissão [<strong>sql</strong>]</small>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 
   </div>
