--- a/views/framework/tools/entity/entity-create-inc.ejs
+++ b/views/framework/tools/entity/entity-create-inc.ejs
@@ -1,15 +1,129 @@
 <div class="tab-pane mt-3" id="entity-create" role="tabpanel" aria-labelledby="entity-create-tab">
 
-	<div class="alert alert-warning alert-dismissible show" role="alert">
+    <div class="alert alert-warning alert-dismissible show" role="alert">
+        <strong><i class="bi bi-shield-shaded"></i>&nbsp;&nbsp;Criar entidade</strong>
+        <small>: requer permissão [<strong>entity-create</strong>]</small>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
 
-		<strong><i class="bi bi-shield-shaded"></i>&nbsp;&nbsp;Criar entidade</strong>
-		<small>: requer permissão [<strong>tools-entity-create</strong>]</small>
-		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    <div class="flex-column">
+        <form class="form-group">
 
-	</div>
+            <entity-name>
+                <hr>
+                <div id="alert-entity-name" class="alert alert-info show" role="alert">
+                    <i class="bi bi-info-circle"></i>&nbsp;Nome: <strong>único</strong> no banco de dados; até 50
+                    caracteres entre letras, números e _
+                </div>
 
-	<%-include entity-create-form-inc.ejs %>
+                <div class="input-field-entity mt-3 mb-1">
+                    <div>
+                        <label for="input-text-entity-name" class="label mb-1 text-secondary"><i
+                                class="bi bi-box"></i>&nbsp;Entidade</label>
+                        <!-- #issue: pesquisar no banco entidade com mesmo nome a partir do terceiro caracter digitado -->
+                        <input type="text" minlength="3" maxlength="50" class="form-control is-invalid"
+                            id="input-text-entity-name" placeholder="Informe um nome único para a entidade"
+                            autocomplete="off" />
+                    </div>
+                </div>
+            </entity-name>
 
-	<div style="height: 10rem">&nbsp;</div>
+            <entity-namespace>
+                <hr>
+                <div class="alert-container" id="entity-fields">
+                    <div id="alert-entity-namespace" class="alert alert-info show" role="alert">
+                        <i class="bi bi-info-circle"></i>&nbsp;Propriedades: id[entidade], crdate e isactive são criados
+                        em todas as tabelas por padrão 
+                    </div>
+                </div>
+                <div class="input-field-entity mt-3 mb-1">
+                    <label for="input-textarea-entity-namespace" class="label mb-1 text-secondary"><i
+                            class="bi bi-tags"></i>&nbsp;Propriedades</label>
+                    <textarea minlength="3" maxlength="500" class="form-control is-invalid" style="height: 5rem"
+                        id="input-textarea-entity-namespace" placeholder="Informe nomes únicos, separados por vírgulas"
+                        autocomplete="off"></textarea>
+                </div>
+            </entity-namespace>
 
+            <entity-fields>
+                <hr>
+                <ul class="nav nav-tabs" id="nav-" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link active" id="nav-form-tab" data-bs-toggle="tab"
+                            data-bs-target="#nav-form" type="button" role="tab" aria-controls="nav-form"
+                            aria-selected="true"><i class="bi bi-ui-radios"></i></button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="nav-code-entitysql-tab" data-bs-toggle="tab"
+                            data-bs-target="#nav-code-entitysql" type="button" role="tab"
+                            aria-controls="nav-code-entitysql" aria-selected="false"><i
+                                class="bi bi-code-square"></i></button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="nav-code-sql-tab" data-bs-toggle="tab"
+                            data-bs-target="#nav-code-sql" type="button" role="tab" aria-controls="nav-code-sql"
+                            aria-selected="false"><i class="bi bi-server"></i></button>
+                    </li>
+                </ul>
+                <div class="tab-content">
+                    <div class="tab-pane show active" id="nav-form" role="tabpanel" aria-labelledby="nav-form-tab">
+                        <div class="table-responsive">
+                            <table class="table table-hover">
+                                <thead>
+                                    <tr>
+                                        <th class="text-left">Campo</th>
+                                        <th class="text-center" style="width: 10rem">Privacidade&nbsp;<i
+                                                class="bi bi-lock-fill"></i></th>
+                                        <th class="text-center" style="width: 10rem">Tipo</th>
+                                        <th class="text-center" style="width: 8rem">Tamanho</th>
+                                        <th class="text-left" style="width: 2.5rem">Opcional</th>
+                                        <th class="text-left fw-bold" style="width: 2.5rem">
+                                            <i class="bi bi-search"></i>
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody id="fields-settings"></tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="tab-pane" id="nav-code-entitysql" role="tabpanel"
+                        aria-labelledby="nav-code-entitysql-tab">
+                        <div class="table-responsive">
+                            <table class="table table-hover">
+                                <thead>
+                                    <tr>
+                                        <th class="text-left">Json</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="entity-entitysql"></tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="tab-pane" id="nav-code-sql" role="tabpanel" aria-labelledby="nav-code-sql-tab">
+                        <div class="table-responsive">
+                            <table class="table table-hover">
+                                <thead>
+                                    <tr>
+                                        <th class="text-left">Sql</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="entity-sql"></tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <div>
+                        <button class="btn btn-outline-secondary" id="btn-entity-create-config"><i
+                                class="bi bi-box"></i>&nbsp;&nbsp;Limpar</button>
+                        <button class="btn btn-success" id="btn-entity-create">Criar&nbsp;&nbsp;<i
+                                class="bi bi-box"></i></button>
+                    </div>
+                </div>
+            </entity-fields>
+
+        </form>
+    </div>
 </div>
+<script src="assets/javascript/framework/tools/dev/entity/create/pretty.js "></script>
+<script src="assets/javascript/framework/tools/dev/entity/create/settings.js "></script>
+<script src="assets/javascript/framework/tools/dev/entity/create/entity.js "></script>
+<script src="assets/javascript/framework/tools/dev/entity/create/form.js "></script>
