--- a/views/framework/tools/sql/sql-inc.ejs
+++ b/views/framework/tools/sql/sql-inc.ejs
@@ -1,13 +1,8 @@
 <div class="tab-pane mt-3" id="sql-terminal" role="tabpanel" aria-labelledby="sql-terminal-tab">
-  
-  <div class="alert alert-warning alert-dismissible show" role="alert">
-
+  <div class="alert alert-warning show" role="alert">
     <strong><i class="bi bi-shield-shaded"></i>&nbsp;&nbsp;Sql</strong>
     <small>: requer permissão [<strong>sql</strong>]</small>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-
   </div>
-  
   <div class="form-group">
     <form class="form-group">
       <div class="text-secondary" style="font-size: 0.8rem;">
