--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -26,7 +26,7 @@
 
 </head>
 
-<body>
+<body style="opacity: .5;">
 
     <main>
 
@@ -35,23 +35,23 @@
                 <div class="col-10 col-sm-8 col-lg-6">
 
                 </div>
-                <div class="col-lg-6 p-5" style="opacity: .9;">
-                    <h1 class="display-3 fw-bold lh-1 mb-3 text-white shadow">Sua próxima área de trabalho.</h1>
+                <div class="col-lg-6 p-5">
+                    <h1 class="display-3 fw-bold lh-1 mb-3 text-white">Sua próxima área de trabalho.</h1>
                     <p class="lead text-light">
                         <figure class="text-light">
                             <blockquote class="blockquote">
-                                <p>Tenho como como missão ajudar pessoas a terem êxito em negócios e carreiras que envolvam tecnologia e inovação.</p>
+                                <p>Programar é uma bela arte, dramática e divertida ao mesmo tempo [risos].</p>
                             </blockquote>
                             <figcaption class="blockquote-footer">
-                                Luiz Tools, <cite title="Source Title">professor</cite>
+                                Pedro Silva, <cite title="Source Title">criador do aes.framework</cite>
                             </figcaption>
                         </figure>
-                        <p class="text-secondary">Eu sou o Pedro Silva, desenvolvedor do aes.framework, inpirado na missão do Luiz, que também é a nossa.</p>
-                        <a class="text-white" href="mailto: aes.tec.br@gmail.com">aes.tec.br@gmail.com</a>
+                        <p class="fw-bold text-info"></p>
                     </p>
-                    <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                        <a href="/framework" class="btn btn-primary">Versão 1.0 (alpha)</a>
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-3">
+                        <a href="/framework" class="btn btn-primary">aes.framework 1.0.alpha</a>
                     </div>
+                    <p><a class="text-white" href="mailto: aes.tec.br@gmail.com">aes.tec.br@gmail.com</a></p>
                 </div>
             </div>
         </div>
