--- a/views/blocks/nav.ejs
+++ b/views/blocks/nav.ejs
@@ -1,23 +1,28 @@
-<nav class="nav">
-    <div class="container-fluid text-white fw-lighter p-1" style="background-color: black; opacity: .9;">
-        <img src="favicon.svg" height="20rem">
-        <small>&nbsp;aes.framework versão 1.0 alfa</small>
+<nav class="nav p-2" style="background-color: black; opacity: .75; border-top: 1px solid #ff9500;">
+    <div class="container-fluid">
+        <a href="/"><img src="favicon.svg" height="20rem"></a>
+        <small class="fw-light" style="color: #ff9500;">&nbsp;aes.framework 1.0.alpha</small>
     </div>
 </nav>
-<nav class="navbar navbar-expand fixed-bottom px-1" style="background-color: black; opacity: .9;">
+<nav class="navbar navbar-expand fixed-bottom"
+    style="background-color: black; opacity: .75; border-bottom: 1px solid #ff9500;">
     <div class="container-fluid">
         <div>
             <a class="btn btn-success" href="/framework"><i class="bi bi-arrow-clockwise"></i></a>
         </div>
+        <div class="px-2">
+            <a data-bs-toggle="offcanvas" href="#aes-help-dock" role="button" aria-controls="aes-help-dock" id="a-aes-help">
+                <img src="assets/images/arte-e-software-cubo.svg"
+                    style="padding-left: .65rem; width: 8.97rem !important" />
+            </a>
+        </div>
         <div class="container-fluid">
             <ul class="nav nav-tabs" id="nav-bar" role="tablist">
-                
                 <style>
-                    .dock{
+                    .dock {
                         color: white;
                     }
                 </style>
-                
                 <li class="nav-item" role="presentation">
                     <button class="nav-link active dock" id="nav-desktop-tab" data-bs-toggle="tab"
                         data-bs-target="#nav-desktop" type="button" role="tab" aria-controls="nav-desktop"
@@ -25,14 +30,14 @@
                         <i class="bi bi-person-circle"></i>
                     </button>
                 </li>
-                
+
                 <li class="nav-item" role="presentation">
                     <button class="nav-link dock" id="nav-apps-tab" data-bs-toggle="tab" data-bs-target="#nav-apps"
                         type="button" role="tab" aria-controls="nav-apps" aria-selected="false">
                         <i class="bi bi-grid"></i>
                     </button>
                 </li>
-                
+
                 <li class="nav-item" role="presentation">
                     <button class="nav-link dock" id="nav-tools-tab" data-bs-toggle="tab" data-bs-target="#nav-tools"
                         type="button" role="tab" aria-controls="nav-tools" aria-selected="false">
@@ -42,13 +47,17 @@
 
             </ul>
         </div>
-        <div class="px-3">
-            <img src="assets/images/arte-e-software-cubo.svg" style="width: 10rem !important" />
+        <div>
+            <div class="form-check form-switch text-warning mx-2" id="icon-checkbox-show-all-warning-alerts">
+                <input class="form-check-input" type="checkbox" id="checkbox-show-all-warning-alerts"
+                    entityfieldformtype="checkbox" checked />
+                <i class="bi bi-shield-shaded"></i>
+            </div>
         </div>
         <div>
-            <div class="form-check form-switch text-warning">
-                <input class="form-check-input" type="checkbox" id="checkbox-dismiss-all-alerts"
-                    entityfieldformtype="checkbox" checked /><i class="bi bi-shield-shaded"></i>
+            <div class="form-check form-switch text-info mx-2" id="icon-checkbox-show-all-info-alerts">
+                <input class="form-check-input" type="checkbox" id="checkbox-show-all-info-alerts"
+                    entityfieldformtype="checkbox" checked /><i class="bi bi-info-circle"></i>
             </div>
         </div>
     </div>
