--- a/views/framework/apps/apps-inc.ejs
+++ b/views/framework/apps/apps-inc.ejs
@@ -1,8 +1,7 @@
 <div class="tab-pane mt-3" id="nav-apps" role="tabpanel" aria-labelledby="nav-apps-tab">
-  <div class="alert alert-warning alert-dismissible show" role="alert">
+  <div class="alert alert-warning show" role="alert">
     <strong><i class="bi bi-shield-shaded"></i>&nbsp;&nbsp;Aplicativos</strong><small>: requer permissão
       [<strong>apps</strong>]</small>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
   <div class="container-alert alert-apps"></div>
   <div class="container-apps">
@@ -22,11 +21,11 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <div class="alert alert-warning alert-dismissible show" role="alert">
+        <div class="alert alert-warning show" role="alert">
           <strong><i class="bi bi-arrows-fullscreen"></i>&nbsp;&nbsp;App</strong><small>: requer
             permissão
             [<strong>app-id</strong>]</small>
-          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          
         </div>
         <code>app-code</code>
       </div>
