--- a/views/framework/desktop/desktop-inc.ejs
+++ b/views/framework/desktop/desktop-inc.ejs
@@ -1,15 +1,8 @@
 <div class="tab-pane mt-3 show active" id="nav-desktop" role="tabpanel" aria-labelledby="nav-desktop-tab">
-
-  <div class="alert alert-warning alert-dismissible show" role="alert">
-
+  <div class="alert alert-warning show" role="alert">
     <strong><i class="bi bi-shield-shaded"></i>&nbsp;&nbsp;Mesa</strong><small>: requer permissão
       [<strong>desktop</strong>]</small>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    
   </div>
-
   <div id="desktop"></div>
-
   <div class="container-alert alert-desktop"></div>
-  
 </div>
