--- a/views/framework/tools/nav-tools-inc.ejs
+++ b/views/framework/tools/nav-tools-inc.ejs
@@ -1,33 +1,25 @@
-<div class="tab-pane" style="padding: 0em !important; margin: 0em;" id="nav-tools" role="tabpanel" aria-labelledby="nav-tools-tab">
-
-    <ul class="nav nav-tabs mt-3" id="nav-tools-tab">
-
-      <li class="nav-item">
-        <a href="#" class="nav-link" id="entity-create-tab" data-bs-toggle="tab" data-bs-target="#entity-create"
-          aria-controls="entity-create" aria-selected="false">
-          <i class="bi bi-box"></i>&nbsp;&nbsp;Criar entidade
-        </a>
-      </li>
-
-      <li class="nav-item">
-        <a href="#" class="nav-link" id="sql-terminal-tab" data-bs-toggle="tab" data-bs-target="#sql-terminal"
-          aria-controls="sql-terminal" aria-selected="true"><i class="bi bi-server"></i>&nbsp;&nbsp;Sql</a>
-      </li>
-
-      <li class="nav-item">
-        <a href="#" class="nav-link" id="sql-server-tab" data-bs-toggle="tab" data-bs-target="#sql-server"
-          aria-controls="sql-server" aria-selected="false"></a>
-      </li>
-
-    </ul>
-  
+<div class="tab-pane" style="padding: 0em !important; margin: 0em;" id="nav-tools" role="tabpanel"
+  aria-labelledby="nav-tools-tab">
+  <ul class="nav nav-tabs mt-3" id="nav-tools-tab">
+    <li class="nav-item">
+      <a href="#" class="nav-link" id="entity-create-tab" data-bs-toggle="tab" data-bs-target="#entity-create"
+        aria-controls="entity-create" aria-selected="false">
+        <i class="bi bi-box"></i>&nbsp;&nbsp;Criar entidade
+      </a>
+    </li>
+    <li class="nav-item">
+      <a href="#" class="nav-link" id="sql-terminal-tab" data-bs-toggle="tab" data-bs-target="#sql-terminal"
+        aria-controls="sql-terminal" aria-selected="true"><i class="bi bi-server"></i>&nbsp;&nbsp;Sql</a>
+    </li>
+    <li class="nav-item">
+      <a href="#" class="nav-link" id="sql-server-tab" data-bs-toggle="tab" data-bs-target="#sql-server"
+        aria-controls="sql-server" aria-selected="false"></a>
+    </li>
+  </ul>
   <div class="container-alert"></div>
-
   <div class="tab-content" id="tab-tools">
     <%-include ./entity/entity-create-inc.ejs %>
       <%-include ./sql/sql-inc.ejs %>
   </div>
-
   <div style="height: 10rem">&nbsp;</div>
-
 </div>
