--- a/views/blocks/aes-help-dock.ejs
+++ b/views/blocks/aes-help-dock.ejs
@@ -1,19 +1,11 @@
-<div class="offcanvas offcanvas-end text-white" tabindex="-1" id="aes-help-dock" aria-labelledby="aes-helpLabel"
-    style="background-image: url('assets/images/bg-aes-help.svg');  background-size: cover; background-color: #6083cf; border-top: 1px solid #ff9500; border-bottom: 1px solid #ff9500; width: 600px !important; opacity: .75;">
-    <div>
-        <a href="#" class="a text-white" data-bs-dismiss="offcanvas" aria-label="Close"><i
-                class="bi bi-x-circle"></i></a>
-    </div>
+<div class="offcanvas offcanvas-top text-white" tabindex="-1" id="aes-help-dock" aria-labelledby="aes-helpLabel"
+    style="background-color: #333333; border-bottom: 1px solid #ff9500;">
     <div class="offcanvas-body">
-
+        <nav class="nav fixed-top p-2" style="background-color: black; opacity: .75; border-top: 1px solid #ff9500;">
+            <div class="container-fluid">
+                <a href="/"><img src="favicon.svg" height="20rem"></a>
+                <small class="fw-light" style="color: #ff9500;">&nbsp;aes.framework 1.0.alpha</small>
+            </div>
+        </nav>
     </div>
-</div>
-
-<div class="offcanvas offcanvas-end text-white" tabindex="-1" id="aes-help-context" aria-labelledby="aes-helpLabel"
-    style="background-image: url('assets/images/bg-aes-help.svg');  background-size: cover; background-color: #6083cf; border-top: 1px solid #ff9500; border-bottom: 1px solid #ff9500; width: 600px !important; opacity: .75;">
-    <div class="offcanvas-header">
-        <a href="#" class="a text-white" data-bs-dismiss="offcanvas" aria-label="Close"><i
-                class="bi bi-x-circle"></i></a>
-    </div>
-    <div class="offcanvas-body" id="aes-help-context"></div>
 </div>
