ajuste aes.help heigth

--- a/views/blocks/aes-help-dock.ejs
+++ b/views/blocks/aes-help-dock.ejs
@@ -1,7 +1,7 @@
-<div class="offcanvas offcanvas-top text-white" tabindex="-1" id="aes-help-dock" aria-labelledby="aes-helpLabel"
-    style="background-color: #333333; border-bottom: 1px solid #ff9500;">
+<div class="offcanvas fade offcanvas-top text-white" tabindex="-1" id="aes-help-dock" aria-labelledby="aes-helpLabel"
+    style="background-color: #333333; border-bottom: 1px solid #ff9500; height: 500px; opacity: 0.85;">
     <div class="offcanvas-body">
-        <nav class="nav fixed-top p-2" style="background-color: black; opacity: .75; border-top: 1px solid #ff9500;">
+        <nav class="nav fixed-top p-2">
             <div class="container-fluid">
                 <a href="/"><img src="favicon.svg" height="20rem"></a>
                 <small class="fw-light" style="color: #ff9500;">&nbsp;aes.framework 1.0.alpha</small>
